# VIRC_IR_

./: .gitignore  CHANGELOG.txt  FIRMWARE_UPLOAD_GUIDE.txt  GUI_USAGE.md  QC_TESTING_USER_MANUAL.txt  README.md  virc_firmware.ino  web_gui.html
.git copy/: COMMIT_EDITMSG  config  index
.git copy/logs/: HEAD
.git copy/logs/refs/heads/: main
.git copy/objects/d3/: tmp_obj_xlFS70
.git copy/refs/heads/: main
cpp_test/: CMakeLists.txt  main.cpp
python_test/: Create_Desktop_Shortcut.bat  GUI_USAGE.md  Launch_VIRC_QC_Station.bat  QC_Test_Results_20250817_215521.txt  README_FOR_USERS.txt  SETUP_VIRC_QC_STATION.bat  USER_GUIDE.md  complete_gui.py  complete_gui_usage.md  create_sample_images.py  gui_requirements.txt  main.py  requirements.txt
virc-main/python_test/: complete_gui.py
virc-main/virc_firmware/: virc_firmware.ino
virc_firmware/: PinDefinitionsAndMore.h  virc_firmware.ino
